--- a/Web-Nhom5/Areas/Admin/Views/Admin/QuanLyTaiKhoan.cshtml
+++ b/Web-Nhom5/Areas/Admin/Views/Admin/QuanLyTaiKhoan.cshtml
@@ -10,3 +10,26 @@
         <small>Tài khoản</small>
     </h1>
 </section>
+
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#formdangnhap">Đăng nhập test</button>
+
+<!-- Modal -->
+<div class="modal fade" id="formdangnhap" role="dialog">
+    <div class="modal-dialog modal-lg">
+
+
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Đăng nhậpr</h4>
+            </div>
+            <div class="modal-body">
+                <p>This is a large modal.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
