--- a/Web-Nhom5/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Web-Nhom5/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
             <nav class="navbar navbar-static-top">
                 <!-- Sidebar toggle button-->
                 <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
-                    <span class="sr-only">Toggle navigation</span>
+                    @*<span class="sr-only">Toggle navigation</span>*@
                 </a>
 
                 <div class="navbar-custom-menu">
@@ -117,14 +117,14 @@
                     <li class="header"> - - - - - </li>
                     <li class="active treeview">
                         <a href="#">
-                            <i class="fa fa-external-link-square"></i> <span>Danh sách chức năng 1</span>
+                            <i class="fa fa-external-link-square"></i> <span>Quản lý tài khoản</span>
                             <span class="pull-right-container">
                                 <i class="fa fa-angle-left pull-right"></i>
                             </span>
                         </a>
                         <ul class="treeview-menu">
-                            <li class="active"><a href="#"><i class="fa fa-circle-o"></i> Chức năng 1</a></li>
-                            <li><a href="#"><i class="fa fa-circle-o"></i> Chức năng 2</a></li>
+                            <li class="active"><a href="#"><i class="fa fa-circle-o"></i> Học viên</a></li>
+                            <li><a href="#"><i class="fa fa-circle-o"></i> Giảng viên</a></li>
                         </ul>
                     </li>
                     <li class="treeview">
