cap nhat layout nguoi dung va chuc nang dang nhap

--- a/Web-Nhom5/Areas/Admin/Views/Admin/Index.cshtml
+++ b/Web-Nhom5/Areas/Admin/Views/Admin/Index.cshtml
@@ -3,11 +3,13 @@
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+
 <section class="content-header">
     <h1>
         Trang
         <small>Chủ</small>
     </h1>
+    @ViewBag.Name a
 </section>
 <section class="content">
 
