--- a/Web-Nhom5/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Web-Nhom5/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -6,15 +6,14 @@
     <title>Nhom 5</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.7 -->
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/CSS/Admin/bootstrap.min.css" rel="stylesheet" />    
     <!-- Ionicons -->
-    <link href="~/Content/ionicons.min.css" rel="stylesheet" />
+    <link href="~/CSS/Admin/ionicons.min.css" rel="stylesheet" />    
     <!-- Font Awesome -->
-    <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
+    <link href="~/fonts/font-awesome.min.css" rel="stylesheet" />    
     <!-- Theme style -->
-    <link href="~/Content/AdminLTE.min.css" rel="stylesheet" />
-    <link href="~/Content/_all-skins.min.css" rel="stylesheet" />
-
+    <link href="~/CSS/Admin/AdminLTE.min.css" rel="stylesheet" />  
+    <link href="~/CSS/Admin/_all-skins.min.css" rel="stylesheet" />      
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
