--- a/Web-Nhom5/Views/Home/Index.cshtml
+++ b/Web-Nhom5/Views/Home/Index.cshtml
@@ -1,8 +1,16 @@
-﻿
-@{
-    ViewBag.Title = "Index";
+﻿@{
+    ViewBag.Title = "Trang chủ";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<!--Slide show-->
+@RenderPage("~/Views/Shared/SlideShow.cshtml")
+<!--End slide show-->
 
-<h2>Index</h2>
-asdasd
+<div id="content">
+    <!--ContentLeft-->
+    @RenderPage("~/Views/Shared/ContentLeft.cshtml")
+    <!--End contentleft-->    
+    <div id="right">
+        Đây là trang index
+    </div>
+</div>
