--- a/Web-Nhom5/CSS/Home/Header.css
+++ b/Web-Nhom5/CSS/Home/Header.css
@@ -128,15 +128,20 @@ button:hover {
 }
 
 @media (max-width: 600px) {
-    .navbar.responsive .icon {
-        position: absolute;
-        right: 0px;
-        top: 0px;
+    .navbar.responsive {
+        position: relative;
+        z-index: 10;
     }
 
-    .navbar.responsive .dropdown {
-        display: block;
-    }
+        .navbar.responsive .icon {
+            position: absolute;
+            right: 0px;
+            top: 0px;
+        }
+
+        .navbar.responsive .dropdown {
+            display: block;
+        }
 
     .navbar.responsive a {
         float: none;
@@ -148,7 +153,7 @@ button:hover {
 /*Modal dang nhap*/
 
 .close {
-    position: absolute;
+    position: relative;
     right: 25px;
     top: 0;
     color: #000;
