cap nhat 1 so file css va js

--- a/Web-Nhom5/Views/Home/Index.cshtml
+++ b/Web-Nhom5/Views/Home/Index.cshtml
@@ -11,6 +11,6 @@
     @RenderPage("~/Views/Shared/ContentLeft.cshtml")
     <!--End contentleft-->    
     <div id="right">
-        Đây là trang index
+        Chưa có nội dung
     </div>
 </div>
