--- a/Web-Nhom5/Views/Home/KhoaHoc.cshtml
+++ b/Web-Nhom5/Views/Home/KhoaHoc.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     var lst = ViewData["listKhoaHoc"] as List<Web_Nhom5.Models.KhoaHoc>;
 }
-<img style="width:100%;height:200px;clear:both;" src="~/img/logo/3.jpg" alt="Alternate Text" />
+@*<img style="width:100%;height:200px;clear:both;" src="~/img/logo/3.jpg" alt="Alternate Text" />*@
 <div id="content">
     <!--ContentLeft-->
     @RenderPage("~/Views/Shared/ContentLeft.cshtml")
