--- a/Web-Nhom5/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Web-Nhom5/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -52,37 +52,20 @@
                                         <small>Noob</small>
                                     </p>
                                 </li>
-
-                                <!-- Menu User Body -->
-                                <!-- <li class="user-body">
-                                  <div class="row">
-                                    <div class="col-xs-4 text-center">
-                                      <a href="#">Followers</a>
-                                    </div>
-                                    <div class="col-xs-4 text-center">
-                                      <a href="#">Sales</a>
-                                    </div>
-                                    <div class="col-xs-4 text-center">
-                                      <a href="#">Friends</a>
-                                    </div>
-                                  </div>
-                                </li> -->
-                                <!-- Menu User Footer-->
+                                <!-- Menu User -->
                                 <li class="user-footer">
                                     <div class="pull-left">
                                         <a href="#" class="btn btn-default btn-flat">Thông tin cá nhân</a>
                                     </div>
                                     <div class="pull-right">
-                                        <a href="~/" class="btn btn-default btn-flat">Đăng xuất</a>
+                                        <a href="~/Login/DangXuat" class="btn btn-default btn-flat">Đăng xuất</a>
                                     </div>
                                 </li>
 
                             </ul>
                         </li>
                         <!-- Control Sidebar Toggle Button -->
-                        <li>
-                            <a href="#"><i class="fa fa-gears"></i></a>
-                        </li>
+                        
                     </ul>
                 </div>
             </nav>
@@ -91,59 +74,21 @@
         <aside class="main-sidebar">
             <!-- sidebar: style can be found in sidebar.less -->
             <section class="sidebar">
-                <!-- Sidebar user panel -->
-                <div class="user-panel">
-                    <div class="pull-left image">
-                        <img src="~/img/user/user1.jpg" class="img-circle" alt="User Image">
-                    </div>
-                    <!-- aaa -->
-                    <div class="pull-left info">
-                        <p>Nguyễn Văn Việt</p>
-                        <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-                    </div>
-                </div>
-                <!-- search form -->
-                <form action="#" method="get" class="sidebar-form">
-                    <div class="input-group">
-                        <input type="text" name="q" class="form-control" placeholder="Search...">
-                        <span class="input-group-btn">
-                            <button type="submit" name="search" id="search-btn" class="btn btn-flat">
-                                <i class="fa fa-search"></i>
-                            </button>
-                        </span>
-                    </div>
-                </form>
-                <!-- /.search form -->
-                <!-- sidebar menu: : style can be found in sidebar.less -->
+                <!-- Sidebar user panel -->              
                 <ul class="sidebar-menu" data-widget="tree">
-                    <li class="header"> - - - - - </li>
                     <li class="active treeview">
                         <a href="#">
-                            <i class="fa fa-external-link-square"></i> <span>Quản lý tài khoản</span>
+                            <i class="fa fa-external-link-square"></i> <span>Chức năng</span>
                             <span class="pull-right-container">
                                 <i class="fa fa-angle-left pull-right"></i>
                             </span>
                         </a>
                         <ul class="treeview-menu">
-                            <li class="active"><a href="#"><i class="fa fa-circle-o"></i> Học viên</a></li>
-                            <li><a href="#"><i class="fa fa-circle-o"></i> Giảng viên</a></li>
+                            <li><a href="#"><i class="fa fa-circle-o"></i>Quản lý học viên</a></li>
+                            <li><a href="~/Admin/QLGiaoVien/Index"><i class="fa fa-circle-o"></i>Quản lý giáo viên</a></li>
+                            <li><a href="~/Admin/Lop/Index"><i class="fa fa-circle-o"></i>Quản lý lớp học</a></li>
                         </ul>
-                    </li>
-                    <li class="treeview">
-                        <a href="#">
-                            <i class="fa fa-external-link-square"></i>
-                            <span>Danh sách chức năng 2</span>
-                            <span class="pull-right-container">
-                                <span class="label label-primary pull-right">3</span>
-                            </span>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li><a href="#"><i class="fa fa-circle-o"></i> Chức năng 1</a></li>
-                            <li><a href="#"><i class="fa fa-circle-o"></i> Chức năng 2</a></li>
-                            <li><a href="#"><i class="fa fa-circle-o"></i> Chức năng 3</a></li>
-                        </ul>
-                    </li>
-
+                    </li>                    
                 </ul>
             </section>
             <!-- /.sidebar -->
